--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "enzyme-adapter-react-16": "1.0.0-beta.6",
     "express": "^4.15.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^4.4.0",
@@ -31,10 +32,11 @@
     "node-sass": "^4.5.3",
     "normalize.css": "^7.0.0",
     "numeral": "^2.0.6",
-    "react": "^15.6.1",
+    "raf": "3.3.2",
+    "react": "16.0.0-rc.3",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.6.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "16.0.0-rc.3",
     "react-modal": "^2.3.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -50,10 +52,10 @@
   "devDependencies": {
     "cross-env": "^5.0.5",
     "dotenv": "^4.0.0",
-    "enzyme": "^2.9.1",
-    "enzyme-to-json": "^2.0.0",
+    "enzyme": "3.0.0-beta.6",
+    "enzyme-to-json": "3.0.0-beta6",
     "jest": "^21.1.0",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "16.0.0-rc.3",
     "webpack-dev-server": "^2.8.2"
   }
 }
